Fix chat behind blocker

--- a/site/app/styles/main.scss
+++ b/site/app/styles/main.scss
@@ -31,7 +31,7 @@ span {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
+  z-index: 0;
 }
 #instructions {
 	width: 100%;
